added submit button, results window with a reset button (for people willing to try again quickly), function in the backend that deals with making the result contents and some fixes

--- a/webApp.html
+++ b/webApp.html
@@ -94,6 +94,27 @@
             </ul>
         </div>
     </div>
+
+    <div id="resultWindow" class="resultBar">
+        <div class="flexContainer">
+            <div class="questionContainer">
+                <legend id="characterName">Doom Slayer</legend>
+                <legend id="tagline">"Rip and tear until it is done"</legend>
+                <img id="characterPic" src="images/doomSlayer.jpg" style="width: 45%; margin: 2%;" alt="">
+                <div style="text-align: center;">
+                    <button class="resetBtn" onclick="window.location.reload()">Reset</button>
+                </div>
+            </div>
+        </div>    
+    </div>
+
+    
+    <div style="text-align: center;">
+    <button id = "submitBtn" class="submitBtn" onclick="evaluateAnswers();">Submit Answers</button>
+    </div>
+
+
+    
 </body>
 <script src="script.js"></script>
 </html>
