removed pre assigned img

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="questionContainer">
                 <legend id="characterName">Doom Slayer</legend>
                 <legend id="tagline">"Rip and tear until it is done"</legend>
-                <img id="characterPic" src="images/doomSlayer.jpg" style="width: 45%; margin: 2%;" alt="">
+                <img id="characterPic" src="" style="width: 45%; margin: 2%;" alt="">
                 <div style="text-align: center;">
                     <button class="resetBtn" onclick="window.location.reload()">Reset</button>
                 </div>
