change color scheme and minor ui tweaks

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Who You?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="margin: 0; padding: 0; background-color:#66FCF1;">
+<body style="margin: 0; padding: 0; background-color:#DDE2C0;">
     <div>
         <div class="headerBox">
         <!-- style="border: solid 1px red; -->
