--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
     <div class="flexContainer">
         <div class="questionContainer">
-           <h4>What will you do the moment you spawn?</h4>
+           <h4>What is your favorite food?</h4>
             <ul class="answerList">
-                <li><input type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Snake"> Hide in a cardboard box.</li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Rip and tear until it is done.</li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Mario"> Smash bricks with my head.</li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Steve"> Punch trees with my barefists.</li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Sonic"> "Gotta go fast!"</li>
+                <li><input type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Snake"> Rations </li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> DEMONS!</li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Mario"> Mushrooms </li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Steve"> Cooked Steak </li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Chilli Dogs </li>
             </ul>
         </div>
     </div>
