--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@
         </div>
     </div>
 
+    <div class="flexContainer">
+        <div class="questionContainer">
+           <h4>What will you do the moment you spawn?</h4>
+            <ul class="answerList">
+                <li><input type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Snake"> Hide in a cardboard box.</li>
+                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Rip and tear until it is done.</li>
+                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Mario"> Smash bricks with my head.</li>
+                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Steve"> Punch trees with my barefists.</li>
+                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Sonic"> "Gotta go fast!"</li>
+            </ul>
+        </div>
+    </div>
+
     <div id="resultWindow" class="resultBar">
         <div class="flexContainer">
             <div class="questionContainer">
