feat: add questions, still subject for revision

--- a/index.html
+++ b/index.html
@@ -51,53 +51,53 @@
                 <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> DEMONS!</li>
                 <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Mario"> Mushrooms </li>
                 <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Steve"> Cooked Steak </li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Chilli Dogs </li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Chili Dogs </li>
             </ul>
         </div>
     </div>
 
     <div class="flexContainer">
         <div class="questionContainer">
-           <h4>What will you do the moment you spawn?</h4>
+           <h4>What kind of ideal place do you want to live in?</h4>
             <ul class="answerList">
-                <li><input type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Snake"> Hide in a cardboard box.</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Rip and tear until it is done.</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Mario"> Smash bricks with my head.</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Steve"> Punch trees with my barefists.</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Sonic"> "Gotta go fast!"</li>
+                <li><input type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Snake"> Zanzibar Land</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Hell</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Mario"> The Mushroom Kingdom</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Steve"> Overworld</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Green Hills</li>
             </ul>
         </div>
     </div>
 
     <div class="flexContainer">
         <div class="questionContainer">
-           <h4>What will you do the moment you spawn?</h4>
+           <h4>What weaponry do you usually associate with?</h4>
             <ul class="answerList">
-                <li><input type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Snake"> Hide in a cardboard box.</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Rip and tear until it is done.</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Mario"> Smash bricks with my head.</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Steve"> Punch trees with my barefists.</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Sonic"> "Gotta go fast!"</li>
+                <li><input type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Snake"> Booby traps</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Super shotgun</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Mario"> Fireballs</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Steve"> An enchanted diamond sword</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Sonic"> I don't need weapons, I have speed</li>
             </ul>
         </div>
     </div>
 
     <div class="flexContainer">
         <div class="questionContainer">
-           <h4>What will you do the moment you spawn?</h4>
+           <h4>What will you do when you encounter an enemy?</h4>
             <ul class="answerList">
-                <li><input type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Snake"> Hide in a cardboard box.</li>
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Rip and tear until it is done.</li>
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Mario"> Smash bricks with my head.</li>
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Steve"> Punch trees with my barefists.</li>
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Sonic"> "Gotta go fast!"</li>
+                <li><input type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Snake"> Engage in close quarters combat</li>
+                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Obliterate them with your badass gun</li>
+                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Mario"> Stomp on their heads</li>
+                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Steve"> Whack them with your weapon</li>
+                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Outrun them or hurl yourself into them</li>
             </ul>
         </div>
     </div>
 
     <div class="flexContainer">
         <div class="questionContainer">
-           <h4>What will you do the moment you spawn?</h4>
+           <h4>Choose a motive/ambition that is close to yours.</h4>
             <ul class="answerList">
                 <li><input type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Snake"> Hide in a cardboard box.</li>
                 <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Rip and tear until it is done.</li>
