--- a/index.html
+++ b/index.html
@@ -9,30 +9,31 @@
 <body style="margin: 0; padding: 0; background-color:#DDE2C0;">
     <div>
         <div class="headerBox">
-        <!-- style="border: solid 1px red; -->
-        <div id="menu" class="sidebar">
-            <a href="#" class="closebtn" onclick="closeDrawer()">×</a>
-            <div style="margin-top: 25px;">
-                <a class="menuLink" href="#" onclick="alert('*Entering general settings* ...joke')">General</a>
-                <a class="menuLink" href="#" onclick="alert('*Entering graphics settings* ... joke')">Graphics</a>
-                <a class="menuLink" href="#" onclick="alert('Developed by: A.R. Elangos and J.E. Lambuson')">About</a>
+            <!-- style="border: solid 1px red; -->
+            <div id="menu" class="sidebar">
+                <a href="#" class="closebtn" onclick="closeDrawer()">×</a>
+                <div style="margin-top: 25px;">
+                    <a class="menuLink" href="#" onclick="alert('*Entering general settings* ...joke')">General</a>
+                    <a class="menuLink" href="#" onclick="alert('*Entering graphics settings* ... joke')">Graphics</a>
+                    <a class="menuLink" href="#" onclick="alert('Developed by: A.R. Elangos and J.E. Lambuson')">About</a>
+                </div>
             </div>
-        </div>
-        <div class="leftHeaderColumn">
-            <div class="hamburgerContainer" onclick="openDrawer()">
-                <div class="hamburgerBars"></div>
-                <div class="hamburgerBars"></div>
-                <div class="hamburgerBars"></div>
+            <div class="leftHeaderColumn">
+                <div class="hamburgerContainer" onclick="openDrawer()">
+                    <div class="hamburgerBars"></div>
+                    <div class="hamburgerBars"></div>
+                    <div class="hamburgerBars"></div>
+                </div>
             </div>
-        </div>
-        <div class="midHeaderColumn"><h1>What Game Character Are You?</h1></div>
-        <div class="rightHeaderColumn"><a class="info" href="#"></a>
+            <div class="midHeaderColumn"><h1>What Game Character Are You?</h1></div>
+            <div class="rightHeaderColumn"><a class="info" href="#"></a>
         </div>
     </div>
 
     <div class="flexContainer">
         <div class="questionContainer">
-           <h4>What will you do the moment you spawn?</h4>
+            <img class="questionPictureContainer" src="images/questions/q1.jpg" width="10%" alt="">
+            <h4>What will you do the moment you spawn?</h4>
             <ul class="answerList">
                 <li><input type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Snake"> Hide in a cardboard box.</li>
                 <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Rip and tear until it is done.</li>
@@ -45,25 +46,27 @@
 
     <div class="flexContainer">
         <div class="questionContainer">
+            <img class="questionPictureContainer" src="images/questions/q2.jpg" width="10%" alt="">
            <h4>What is your favorite food?</h4>
             <ul class="answerList">
-                <li><input type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Snake"> Rations </li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> DEMONS!</li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Mario"> Mushrooms </li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Steve"> Cooked Steak </li>
                 <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Chili Dogs </li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Mario"> Mushrooms </li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> DEMONS!</li>
+                <li><input type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Snake"> Rations </li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Steve"> Cooked Steak </li>
             </ul>
         </div>
     </div>
 
     <div class="flexContainer">
         <div class="questionContainer">
-           <h4>What kind of ideal place do you want to live in?</h4>
+            <img class="questionPictureContainer" src="images/questions/q3.jpg" width="10%" alt="">
+           <h4>What game world do you want to be in?</h4>
             <ul class="answerList">
-                <li><input type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Snake"> Zanzibar Land</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Hell</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Mario"> The Mushroom Kingdom</li>
                 <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Steve"> Overworld</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Mario"> The Mushroom Kingdom</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Hell</li>
+                <li><input type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Snake"> Real World</li>
                 <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Green Hills</li>
             </ul>
         </div>
@@ -71,39 +74,42 @@
 
     <div class="flexContainer">
         <div class="questionContainer">
-           <h4>What weaponry do you usually associate with?</h4>
+            <img class="questionPictureContainer" src="images/questions/q4.jpeg" width="10%" alt="">
+            <h4>What weaponry do you usually associate with?</h4>
             <ul class="answerList">
-                <li><input type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Snake"> Booby traps</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Super shotgun</li>
                 <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Mario"> Fireballs</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Steve"> An enchanted diamond sword</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Super shotgun</li>
                 <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Sonic"> I don't need weapons, I have speed</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Steve"> An enchanted diamond sword</li>
+                <li><input type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Snake"> Suppressed pistol</li>
             </ul>
         </div>
     </div>
 
     <div class="flexContainer">
         <div class="questionContainer">
+            <img class="questionPictureContainer" src="images/questions/q5.jpg" width="10%" alt="">
            <h4>What will you do when you encounter an enemy?</h4>
             <ul class="answerList">
-                <li><input type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Snake"> Engage in close quarters combat</li>
+                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Outrun them or hurl yourself into them</li>
                 <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Obliterate them with your badass gun</li>
+                <li><input type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Snake"> Engage in close quarters combat</li>
                 <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Mario"> Stomp on their heads</li>
                 <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Steve"> Whack them with your weapon</li>
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Outrun them or hurl yourself into them</li>
             </ul>
         </div>
     </div>
 
     <div class="flexContainer">
         <div class="questionContainer">
-           <h4>Choose a motive/ambition that is close to yours.</h4>
+            <img class="questionPictureContainer" src="images/questions/6.jpg" width="10%" alt="">
+           <h4>What's something that really scares you? </h4>
             <ul class="answerList">
-                <li><input type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Snake"> Hide in a cardboard box.</li>
-                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Rip and tear until it is done.</li>
-                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Mario"> Smash bricks with my head.</li>
-                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Steve"> Punch trees with my barefists.</li>
-                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Sonic"> "Gotta go fast!"</li>
+                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> I fear nothing</li>
+                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Mario"> Ghosts</li>
+                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Slowing down</li>
+                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Steve"> Exploding monsters</li>
+                <li><input type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Snake"> Nuclear weapons</li>
             </ul>
         </div>
     </div>
