--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="hamburgerBars"></div>
                 </div>
             </div>
-            <div class="midHeaderColumn"><h1>What Game Character Are You?</h1></div>
+            <div class="midHeaderColumn"><h1>What Brick Builder Are You?</h1></div>
             <div class="rightHeaderColumn"><a class="info" href="#"></a>
         </div>
     </div>
@@ -33,13 +33,12 @@
     <div class="flexContainer">
         <div class="questionContainer">
             <img class="questionPictureContainer" src="images/questions/q1.jpg" width="10%" alt="">
-            <h4>What will you do the moment you spawn?</h4>
+            <h4>What's your PRIMARY motivation when starting a new build?</h4>
             <ul class="answerList">
-                <li><input type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Snake"> Hide in a cardboard box.</li>
-                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Rip and tear until it is done.</li>
-                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Mario"> Smash bricks with my head.</li>
-                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Steve"> Punch trees with my bare fists.</li>
-                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Sonic"> "Gotta go fast!"</li>
+                <li><input type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Snake"> Seeing the finished model look exactly right, down to the last detail.</li>
+                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Getting it built FAST so I can start playing with it or moving on.</li>
+                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Mario"> Creating a cool scene, character, or story backdrop.</li>
+                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Steve"> Making something that does something (moves, lifts, spins, etc.).</li>
             </ul>
         </div>
     </div>
@@ -47,13 +46,12 @@
     <div class="flexContainer">
         <div class="questionContainer">
             <img class="questionPictureContainer" src="images/questions/q2.jpg" width="10%" alt="">
-           <h4>What is your favorite food?</h4>
+           <h4>How do you approach the actual building process?</h4>
             <ul class="answerList">
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Chili Dogs </li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Mario"> Mushrooms </li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> DEMONS!</li>
-                <li><input type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Snake"> Rations </li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Steve"> Cooked Steak </li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Methodically: Sorting pieces, following instructions step-by-step, checking alignment.</li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Mario"> Energetically: Dumping pieces out, building quickly, improvising if needed.</li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Creatively: Focusing on the overall look/feel for the story, maybe skipping complex details.</li>
+                <li><input type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Snake"> Experimentally: Focusing on mechanisms, connections, and how things function together.</li>
             </ul>
         </div>
     </div>
@@ -61,13 +59,12 @@
     <div class="flexContainer">
         <div class="questionContainer">
             <img class="questionPictureContainer" src="images/questions/q3.jpg" width="10%" alt="">
-           <h4>What game world do you want to be in?</h4>
+           <h4>What happens if you accidentally place a piece slightly crooked or off-color?</h4>
             <ul class="answerList">
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Steve"> Overworld</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Mario"> The Mushroom Kingdom</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Hell</li>
-                <li><input type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Snake"> Real World</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Green Hills</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Steve"> It MUST be fixed immediately. It throws off the whole build for me.</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Mario"> Eh, close enough! I probably won't even notice once I'm playing.</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Depends - if it ruins the scene's vibe, I fix it. Otherwise, maybe not.</li>
+                <li><input type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Snake"> Only if it affects the function. If it still works, it stays.</li>
             </ul>
         </div>
     </div>
@@ -75,13 +72,12 @@
     <div class="flexContainer">
         <div class="questionContainer">
             <img class="questionPictureContainer" src="images/questions/q4.jpeg" width="10%" alt="">
-            <h4>What weaponry do you usually associate with?</h4>
+            <h4>What's more important in the final build?</h4>
             <ul class="answerList">
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Mario"> Fireballs</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Super shotgun</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Sonic"> I don't need weapons, I have speed</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Steve"> An enchanted diamond sword</li>
-                <li><input type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Snake"> Suppressed pistol</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Mario"> Perfect accuracy and pristine appearance.</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Playability and fun factor right now.</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Sonic"> The story, characters, and overall atmosphere it creates.</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Steve"> That it actually works or does something cool mechanically.</li>
             </ul>
         </div>
     </div>
@@ -89,44 +85,15 @@
     <div class="flexContainer">
         <div class="questionContainer">
             <img class="questionPictureContainer" src="images/questions/q5.jpg" width="10%" alt="">
-           <h4>What will you do when you encounter an enemy?</h4>
+           <h4>Once the build is complete, what are you most likely to do first?</h4>
             <ul class="answerList">
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Outrun them or hurl yourself into them</li>
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Obliterate them with your badass gun</li>
-                <li><input type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Snake"> Engage in close quarters combat</li>
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Mario"> Stomp on their heads</li>
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Steve"> Whack them with your weapon</li>
+                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Admire it from all angles, maybe take pictures. It's done!</li>
+                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Grab minifigs and start an epic battle or make it zoom around!</li>
+                <li><input type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Snake"> Set up minifigs and start imagining/acting out a story or scenario.</li>
+                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Mario"> Test its function, see how strong it is, or start modifying it to work better.</li>
             </ul>
         </div>
     </div>
-
-    <div class="flexContainer">
-        <div class="questionContainer">
-            <img class="questionPictureContainer" src="images/questions/6.jpg" width="10%" alt="">
-           <h4>What's something that really scares you? </h4>
-            <ul class="answerList">
-                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> I fear nothing</li>
-                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Mario"> Ghosts</li>
-                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Slowing down</li>
-                <li><input  type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Steve"> Exploding monsters</li>
-                <li><input type="radio" name="q6" onclick="assignAnswer(this.name, this.value)" value="Snake"> Nuclear weapons</li>
-            </ul>
-        </div>
-    </div>
-
-    <div id="resultWindow" class="resultBar">
-        <div class="flexContainer">
-            <div class="questionContainer">
-                <legend id="characterName">Doom Slayer</legend>
-                <legend id="tagline">"Rip and tear until it is done"</legend>
-                <img id="characterPic" src="" style="width: 45%; margin: 2%;" alt="">
-                <div style="text-align: center;">
-                    <button class="resetBtn" onclick="window.location.reload()">Reset</button>
-                </div>
-            </div>
-        </div>    
-    </div>
-
     
     <div style="text-align: center;">
     <button id = "submitBtn" class="submitBtn" onclick="evaluateAnswers();">Submit Answers</button>
