--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who You?</title>
+    <title>What Brick Builder Are You?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="margin: 0; padding: 0; background-color:#DDE2C0;">
