--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <img class="questionPictureContainer" src="images/questions/q1.jpg" width="10%" alt="">
             <h4>What's your PRIMARY motivation when starting a new build?</h4>
             <ul class="answerList">
-                <li><input type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Snake"> Seeing the finished model look exactly right, down to the last detail.</li>
-                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Getting it built FAST so I can start playing with it or moving on.</li>
-                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Mario"> Creating a cool scene, character, or story backdrop.</li>
-                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="Steve"> Making something that does something (moves, lifts, spins, etc.).</li>
+                <li><input type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="THE ALCHEMIST"> Seeing the finished model look exactly right, down to the last detail.</li>
+                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="THE SWASHBUCKLER"> Getting it built FAST so I can start playing with it or moving on.</li>
+                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="THE LOREWEAVER"> Creating a cool scene, character, or story backdrop.</li>
+                <li><input  type="radio" name="q1" onclick="assignAnswer(this.name, this.value)" value="THE GEARMASTER"> Making something that does something (moves, lifts, spins, etc.).</li>
             </ul>
         </div>
     </div>
@@ -50,9 +50,9 @@
            <h4>How do you approach the actual building process?</h4>
             <ul class="answerList">
                 <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Methodically: Sorting pieces, following instructions step-by-step, checking alignment.</li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Mario"> Energetically: Dumping pieces out, building quickly, improvising if needed.</li>
-                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Creatively: Focusing on the overall look/feel for the story, maybe skipping complex details.</li>
-                <li><input type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="Snake"> Experimentally: Focusing on mechanisms, connections, and how things function together.</li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="THE LOREWEAVER"> Energetically: Dumping pieces out, building quickly, improvising if needed.</li>
+                <li><input  type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="THE SWASHBUCKLER"> Creatively: Focusing on the overall look/feel for the story, maybe skipping complex details.</li>
+                <li><input type="radio" name="q2" onclick="assignAnswer(this.name, this.value)" value="THE ALCHEMIST"> Experimentally: Focusing on mechanisms, connections, and how things function together.</li>
             </ul>
         </div>
     </div>
@@ -62,10 +62,10 @@
             <img class="questionPictureContainer" src="images/questions/q3.jpg" width="10%" alt="">
            <h4>What happens if you accidentally place a piece slightly crooked or off-color?</h4>
             <ul class="answerList">
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Steve"> It MUST be fixed immediately. It throws off the whole build for me.</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Mario"> Eh, close enough! I probably won't even notice once I'm playing.</li>
-                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Depends - if it ruins the scene's vibe, I fix it. Otherwise, maybe not.</li>
-                <li><input type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="Snake"> Only if it affects the function. If it still works, it stays.</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="THE GEARMASTER"> It MUST be fixed immediately. It throws off the whole build for me.</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="THE LOREWEAVER"> Eh, close enough! I probably won't even notice once I'm playing.</li>
+                <li><input  type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="THE SWASHBUCKLER"> Depends - if it ruins the scene's vibe, I fix it. Otherwise, maybe not.</li>
+                <li><input type="radio" name="q3" onclick="assignAnswer(this.name, this.value)" value="THE ALCHEMIST"> Only if it affects the function. If it still works, it stays.</li>
             </ul>
         </div>
     </div>
@@ -75,10 +75,10 @@
             <img class="questionPictureContainer" src="images/questions/q4.jpeg" width="10%" alt="">
             <h4>What's more important in the final build?</h4>
             <ul class="answerList">
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Mario"> Perfect accuracy and pristine appearance.</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Playability and fun factor right now.</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="THE LOREWEAVER"> Perfect accuracy and pristine appearance.</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="THE SWASHBUCKLER"> Playability and fun factor right now.</li>
                 <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Sonic"> The story, characters, and overall atmosphere it creates.</li>
-                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="Steve"> That it actually works or does something cool mechanically.</li>
+                <li><input  type="radio" name="q4" onclick="assignAnswer(this.name, this.value)" value="THE GEARMASTER"> That it actually works or does something cool mechanically.</li>
             </ul>
         </div>
     </div>
@@ -89,9 +89,9 @@
            <h4>Once the build is complete, what are you most likely to do first?</h4>
             <ul class="answerList">
                 <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Sonic"> Admire it from all angles, maybe take pictures. It's done!</li>
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Doom Slayer"> Grab minifigs and start an epic battle or make it zoom around!</li>
-                <li><input type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Snake"> Set up minifigs and start imagining/acting out a story or scenario.</li>
-                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="Mario"> Test its function, see how strong it is, or start modifying it to work better.</li>
+                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="THE SWASHBUCKLER"> Grab minifigs and start an epic battle or make it zoom around!</li>
+                <li><input type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="THE ALCHEMIST"> Set up minifigs and start imagining/acting out a story or scenario.</li>
+                <li><input  type="radio" name="q5" onclick="assignAnswer(this.name, this.value)" value="THE LOREWEAVER"> Test its function, see how strong it is, or start modifying it to work better.</li>
             </ul>
         </div>
     </div>
